session-2-ai-red-vs-blue-devsecops/03-gitops/backstage/devsecops-agent/service-backstage-devsecops-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-devsecops-agent
  namespace: devsecops-agent
spec:
  selector:
    app: backstage-devsecops-agent
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
